--- a/src/app/evaluation/evaluation-table/evaluation-table.component.html
+++ b/src/app/evaluation/evaluation-table/evaluation-table.component.html
@@ -15,29 +15,29 @@
     </mat-chip-list>
       <mat-form-field class="search">
         <mat-label>Search assessments</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="ID, task, student name">
+        <input matInput (keyup)="applyFilter($event)" placeholder="ID, competency, student name">
       </mat-form-field>
     
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z1">
     
-        <ng-container matColumnDef="evaluationId">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header>ID</th>
-          <td mat-cell *matCellDef="let evaluation"> {{evaluation.evaluationId}}</td>
-        </ng-container>
-    
-        <ng-container matColumnDef="task">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Task</th>
-          <td mat-cell *matCellDef="let evaluation"> {{evaluation.task | titlecase}}</td>
-        </ng-container>
-    
         <ng-container matColumnDef="firstName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Student First Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> First Name</th>
           <td mat-cell *matCellDef="let evaluation"> {{evaluation.firstName | titlecase }}</td>
         </ng-container>
       
         <ng-container matColumnDef="lastName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Student Last Name</th>
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Name</th>
           <td mat-cell *matCellDef="let evaluation"> {{evaluation.lastName | titlecase }}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="competency">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Competency</th>
+          <td mat-cell *matCellDef="let evaluation"> {{evaluation.competency | titlecase}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="date">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Date</th>
+          <td mat-cell *matCellDef="let evaluation"> {{evaluation.date | date }}</td>
         </ng-container>
     
         <ng-container matColumnDef="action">
@@ -55,8 +55,8 @@
             <button 
             mat-flat-button
             color="primary" 
-            (click)="openActionDialog(evaluation.studentId, evaluation.task)">
-            Grade
+            (click)="openActionDialog(evaluation.studentId, evaluation.competency, evaluation.DOC, evaluation.EPA)">
+            Evaluate
             </button>
           </td>
         </ng-container>
