--- a/src/app/evaluation/evaluation-table/evaluation-dialog/evaluation-dialog.component.html
+++ b/src/app/evaluation/evaluation-table/evaluation-dialog/evaluation-dialog.component.html
@@ -9,7 +9,7 @@
     <br>
      <form>
         <mat-button-toggle-group name="evaluation" aria-label="evaluation">
-            <mat-button-toggle value="pass">Entrusable</mat-button-toggle>
+            <mat-button-toggle value="pass">Entrustable</mat-button-toggle>
             <mat-button-toggle value="fail">Not entrustable</mat-button-toggle>
         </mat-button-toggle-group>
         <br>
